# netlifycms-oauth-github-provider

./: Dockerfile  README.md  netlifyoauth.service  pyproject.toml
netlifycms_oauth_github_provider/: __init__.py
templates/: callback.html  index.html
